Update Cadastro de produto

--- a/Codigo/atelier_picinin/src/components/Rodape.css
+++ b/Codigo/atelier_picinin/src/components/Rodape.css
@@ -1,5 +1,5 @@
 .color{
-    background-color: black;
+    background-color: rgb(76, 74, 74);
     margin: 0 !important;
     bottom: 0;
     width: 100%;
