--- a/Codigo/atelier_picinin/src/pages/css/CadastrarInsumo.css
+++ b/Codigo/atelier_picinin/src/pages/css/CadastrarInsumo.css
@@ -4,57 +4,24 @@
     flex-direction: column;
     align-items: center;
     gap: 30px;
+    margin: 0 auto 0;
+}
+
+.titleButton{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
 }
 
 .title {
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
-}
-
-.btn-primary {
-    font-size: 14px;
-    border-radius: 70px;
-    width: 170px;
-    margin-left: 60%;
-}
-
-/** Estilos de tabela **/
-
-table {
     width: 80%;
     text-align: center;
-    font-size: 14px;
-}
-
-span {
-    font-weight: bolder;
-}
-
-td {
-    border-bottom: 1px solid black;
-    padding: 20px;
-}
-
-.btnLixeira {
-    border: none;
-    background-color: white;
-    font-size: 20px;
 }
 
 /** Estilos de formulário (modal) **/
-
-form {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-}
-
-form input,
-form label {
-    width: 80%;
-    margin-bottom: 5px;
-}
 
 .btnMais {
     font-size: 20px;
