--- a/Codigo/atelier_picinin/src/pages/css/Rodape.css
+++ b/Codigo/atelier_picinin/src/pages/css/Rodape.css
@@ -1,5 +1,5 @@
 .color {
-    background-color: rgb(76, 74, 74);
+    background-color: #D9D9D9;
     position: fixed;
     margin: 0 !important;
     bottom: 0;
