--- a/Codigo/atelier_picinin/src/components/css_components/Button.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/Button.module.css
@@ -57,3 +57,12 @@
     color: var(--btn-azul);
     background-color: white;
 }
+
+.dropdown{
+    width: 100%;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    margin-top: 10px;
+    text-align: left;
+}
