--- a/Codigo/atelier_picinin/src/components/css_components/Tables.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/Tables.module.css
@@ -1,14 +1,40 @@
-table {
+.table {
     width: 80%;
     text-align: center;
     font-size: 14px;
 }
 
-span {
-    font-weight: bolder;
+.lineTable, .headerTable{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 30px;
 }
 
-td {
+.lineTable{
     border-bottom: 1px solid black;
-    padding: 20px;
+}
+
+.headerTable{
+    margin-bottom: 10px;
+}
+
+.headerTable em {
+    font-weight: 600;
+    font-size: .9rem;
+}
+
+.lineTable em:last-child, .headerTable em:last-child {
+    width: 70px;
+}
+
+.headerTable em:last-child {
+    visibility: hidden;
+}
+
+em {
+    font-style: normal;
+    width: 200px;
+    text-align: left;
+    padding: 10px 0;
 }
