--- a/Codigo/atelier_picinin/src/pages/css/CadastroInsumo.css
+++ b/Codigo/atelier_picinin/src/pages/css/CadastroInsumo.css
@@ -1,8 +1,13 @@
-.body {
+.body-input-register {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     gap: 30px;
-    margin: 0 auto 0;
+    margin-top: 100px;
+}
+
+.title{
+    text-align: center;
+    width: 80%;
 }
