--- a/Codigo/atelier_picinin/src/pages/css/EditInventory.css
+++ b/Codigo/atelier_picinin/src/pages/css/EditInventory.css
@@ -1,4 +1,13 @@
+.body-edit-inventory{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    margin-top: 100px;
+}
+
 .title{
     text-align: center;
-    width: 100%;
+    width: 80%;
 }
