[Update] Ajeitando o css

--- a/Codigo/atelier_picinin/src/components/css_components/Button.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/Button.module.css
@@ -2,8 +2,8 @@
     --verde: rgb(0, 255, 13);
     --btn-azul: #4939FF;
     --dark-gray: rgb(46, 46, 46);
-    --light-gray: rgb(245, 243, 243);
-    --box-shadow: 1px 1px 10px rgba(0, 0, 0, .2);
+    --light-gray: rgb(247, 247, 247);
+    --box-shadow: 1px 1px 5px rgba(0, 0, 0, .1);
 }
 
 .btnTrash, .btnEdit {
@@ -70,6 +70,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: var(--light-gray);
+    box-shadow: var(--box-shadow);
 }
 
 .dropdown em {
