--- a/Codigo/atelier_picinin/src/components/css_components/Input.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/Input.module.css
@@ -1,12 +1,28 @@
 div.divInput {
-    width: 100%;
-    margin-bottom: 5px;
     display: flex;
-    justify-content: center;
+    justify-content: inherit;
+    align-items: inherit;
     flex-direction: column;
 }
 
 .input, .label {
-    width: 80%;
-    margin: 0 auto 5px;
+    background: none;
+    margin: 0;
+    padding: 0;
+    text-align: inherit;
+    border: none;
+}
+
+.input {
+    padding: 0 10px;
+}
+
+.input:focus {
+    border: none;
+    box-shadow: none;
+    outline: none;
+}
+
+.label{
+    margin-bottom: 10px;
 }
