--- a/Codigo/atelier_picinin/src/components/css_components/InputComponentTable.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/InputComponentTable.module.css
@@ -22,3 +22,43 @@
 .component em:first-child {
     width: 40%;
 }
+
+.emfalta{
+    text-align: center;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: rgb(255, 0, 0);
+    background-color: rgb(255, 204, 204);
+    padding: 3px 10px;
+    border-radius: 5px;
+}
+
+.ok{
+    text-align: center;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: rgb(0, 255, 34);
+    background-color: rgb(219, 252, 218);
+    padding: 3px 10px;
+    border-radius: 5px;
+}
+
+.vencendo{
+    text-align: center;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: rgb(255, 217, 0);
+    background-color: rgb(255, 252, 218);
+    padding: 3px 10px;
+    border-radius: 5px;
+}
+
+.vencido{
+    text-align: center;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: rgb(162, 0, 255);
+    background-color: rgb(240, 213, 255);
+    padding: 3px 10px;
+    border-radius: 5px;
+}
