--- a/Codigo/atelier_picinin/src/pages/css/CadastroInsumo.css
+++ b/Codigo/atelier_picinin/src/pages/css/CadastroInsumo.css
@@ -4,7 +4,9 @@
     flex-direction: column;
     align-items: center;
     gap: 30px;
-    margin-top: 100px;
+    margin: 100px auto 0;
+    padding: 0 auto;
+    width: 65%;
 }
 
 .title{
