[UPDATE] Estilos Home

--- a/Codigo/atelier_picinin/src/pages/css/Home.css
+++ b/Codigo/atelier_picinin/src/pages/css/Home.css
@@ -39,6 +39,7 @@
 .img {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     width: 50%;
     background-color: #af8b8b81;
