--- a/Codigo/atelier_picinin/src/pages/css/Rodape.css
+++ b/Codigo/atelier_picinin/src/pages/css/Rodape.css
@@ -1,14 +1,27 @@
 .color {
     background-color: #D9D9D9;
-    position: fixed;
     margin: 0 !important;
     bottom: 0;
     width: 100%;
+    height: 100px;
 }
 
 .color p {
-    margin: 0 !important;
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 15px;
+    font-weight: bolder;
+}
+
+.buttonsRodape {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    cursor: pointer;
+    gap: 20px;
 }
 
 @media (min-width: 600px) {
