--- a/Codigo/atelier_picinin/src/components/css_components/Dropdown.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/Dropdown.module.css
@@ -1,19 +1,35 @@
+.body-dropdown{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.divSelect{
+    display: inherit;
+    justify-content: inherit;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.label{
+    padding: 0 10px;
+    margin-bottom: 5px;
+}
+
 .select {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     border: none;
     border-radius: 50px;
     background-color: #f7f7f7;
     padding: 5px 15px;
-    width: 25% !important;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, .2);
+    max-width: 100%;
 }
 
 .select:focus{
     outline: none;
-}
-
-.select option{
-    border-radius: 0 0 17px 17px;
 }
