--- a/Codigo/atelier_picinin/src/components/css_components/Form.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/Form.module.css
@@ -3,16 +3,11 @@
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     width: 100%;
+    height: 500px;
 }
 
-.btnMais {
-    font-size: 20px;
-    border: none;
-    background-color: white;
-}
-
-.btn-warning {
-    margin-top: 20px;
+.form button {
+    margin-top: 30px;
 }
