--- a/Codigo/atelier_picinin/src/components/css_components/Input.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/Input.module.css
@@ -1,22 +1,18 @@
 div.divInput {
     display: flex;
-    justify-content: inherit;
-    align-items: inherit;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
+    width: 100%;
 }
 
 .input, .label {
     background: none;
     margin: 0;
-    padding: 0;
-    text-align: inherit;
-    border: none;
-}
-
-.input {
     padding: 0 10px;
+    border: none;
+    width: inherit;
 }
-
 .input:focus {
     border: none;
     box-shadow: none;
@@ -24,5 +20,5 @@ div.divInput {
 }
 
 .label{
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
