--- a/Codigo/atelier_picinin/src/components/css_components/SearchBar.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/SearchBar.module.css
@@ -5,7 +5,7 @@
     border-radius: 50px;
     background-color: #f7f7f7;
     padding: 5px 15px;
-    width: 40% !important;
+    min-width: 40% !important;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, .2);
 }
 
