--- a/Codigo/atelier_picinin/src/pages/css/Estoque.css
+++ b/Codigo/atelier_picinin/src/pages/css/Estoque.css
@@ -15,7 +15,7 @@
     width: 100%;
 }
 
-h1.title {
+h1.inventory-title {
     font-size: 25px;
     text-align: left;
     width: 50%;
@@ -27,10 +27,6 @@ div.filters {
     align-items: baseline;
     width: 100%;
     margin-bottom: 30px;
-}
-
-div.filters div{
-    width: 60%;
 }
 
 div.filters select {
