[Update] Um tapa no css

--- a/Codigo/atelier_picinin/src/App.css
+++ b/Codigo/atelier_picinin/src/App.css
@@ -4,3 +4,16 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+.App {
+    max-width: 2000px;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.App > div {
+    margin: 100px 0;
+}
