--- a/Codigo/atelier_picinin/src/components/css_components/Dropdown.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/Dropdown.module.css
@@ -1,9 +1,8 @@
 .body-dropdown{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     flex-wrap: wrap;
-    width: 100%;
 }
 
 .divSelect{
