--- a/Codigo/atelier_picinin/src/pages/css/CadastroInsumo.css
+++ b/Codigo/atelier_picinin/src/pages/css/CadastroInsumo.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     gap: 30px;
-    margin: 100px auto 0;
+    margin: 0 auto;
     padding: 0 auto;
     width: 65%;
 }
