--- a/Codigo/atelier_picinin/src/pages/css/EditInventory.css
+++ b/Codigo/atelier_picinin/src/pages/css/EditInventory.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     gap: 30px;
-    margin: 100px auto 0;
+    margin: 0 auto;
     width: 65%;
 }
 
