--- a/Codigo/atelier_picinin/src/pages/css/Estoque.css
+++ b/Codigo/atelier_picinin/src/pages/css/Estoque.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     gap: 30px;
-    margin: 50px auto;
+    margin: 0 auto;
     width: 65%;
 }
 
