--- a/Codigo/atelier_picinin/src/pages/css/Rodape.css
+++ b/Codigo/atelier_picinin/src/pages/css/Rodape.css
@@ -1,12 +1,11 @@
-.color {
+.footer {
     background-color: #D9D9D9;
-    margin: 0 !important;
-    bottom: 0;
+    margin: auto 0 0 !important;
     width: 100%;
     height: 100px;
 }
 
-.color p {
+.footer p {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -22,11 +21,4 @@
     justify-content: center;
     cursor: pointer;
     gap: 20px;
-}
-
-@media (min-width: 600px) {
-    .color {
-
-        bottom: 0;
-    }
 }
