--- a/Codigo/atelier_picinin/src/components/css_components/layout/Button.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/layout/Button.module.css
@@ -8,14 +8,14 @@
 
 .btnTrash, .btnEdit {
     border: none;
-    background-color: white;
+    background: none;
     font-size: 20px;
 }
 
 .btnCadastrar{
     border: none;
     background-color: var(--verde);
-    border-radius: 10px;
+    border-radius: 20px;
     padding: 5px 15px;
     color: white;
     transition: all .2s;
@@ -30,7 +30,7 @@
 .btnBack{
     border: none;
     background-color: var(--dark-gray);
-    border-radius: 10px;
+    border-radius: 20px;
     padding: 5px 15px;
     color: white;
     transition: all .2s;
@@ -49,7 +49,6 @@
     border: none;
     border-radius: 20px;
     transition: all .2s;
-    margin-left: auto;
 }
 
 .btnAdd:hover{
@@ -58,11 +57,11 @@
     background-color: white;
 }
 
-.dropdown{
+.dropdown {
     width: 100%;
     padding: 10px 20px;
     border: none;
-    border-radius: 10px;
+    border-radius: 20px;
     margin-top: 25px;
     text-align: left;
     display: flex;
@@ -92,4 +91,12 @@
     box-shadow: var(--box-shadow);
     color: var(--btn-azul);
     background-color: white;
+}
+
+@media (max-width: 900px) {
+    .btnDropdown {
+        height: 35px;
+        width: 35px;
+        padding: 0;
+    }
 }
