--- a/Codigo/atelier_picinin/src/components/css_components/layout/Dropdown.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/layout/Dropdown.module.css
@@ -1,18 +1,17 @@
-.body-dropdown{
+.body-dropdown {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    flex-wrap: wrap;
 }
 
-.divSelect{
+.divSelect {
     display: inherit;
     justify-content: inherit;
     align-items: flex-start;
     flex-direction: column;
 }
 
-.label{
+.label {
     padding: 0 10px;
     margin-bottom: 5px;
 }
@@ -25,10 +24,14 @@
     border-radius: 50px;
     background-color: #f7f7f7;
     padding: 5px 15px;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .2);
-    max-width: 100%;
 }
 
 .select:focus{
     outline: none;
+}
+
+@media (max-width: 900px) {
+    .body-dropdown {
+        justify-content: space-between;
+    }
 }
