--- a/Codigo/atelier_picinin/src/pages/css/inventory/Estoque.css
+++ b/Codigo/atelier_picinin/src/pages/css/inventory/Estoque.css
@@ -8,11 +8,12 @@
     width: 65%;
 }
 
-.titleButton{
+.titleButton {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    flex-wrap: wrap;
 }
 
 h1.inventory-title {
@@ -27,8 +28,30 @@ div.filters {
     align-items: baseline;
     width: 100%;
     margin-bottom: 30px;
+    flex-wrap: wrap;
 }
 
 div.filters select {
     margin-top: auto;
+}
+
+@media (max-width: 900px) {
+    div.filters {
+        justify-content: center;
+        align-content: space-between;
+        height: 120px;
+        margin-top: 35px;
+    }
+    .titleButton {
+        text-align: center;
+        justify-content: center;
+    }
+    h1.inventory-title {
+        width: 100%;
+        text-align: center;
+    }
+    div.filters .body-dropdown {
+        width: 100% !important;
+        background-color: black !important;
+    }
 }
