[FIX] Correção de bugs ao remover a data

--- a/Codigo/atelier_picinin/src/components/css_components/Form.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/Form.module.css
@@ -11,6 +11,20 @@
     width: 100%;
 }
 
+.dateInput {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.dateInput div {
+    width: 85%;
+}
+
+.dateInput input {
+    width: 100%;
+}
+
 .hudBtn{
     display: flex;
     justify-content: space-between;
