{Update} Adição da funcionalidade de escoler foto

--- a/Codigo/atelier_picinin/src/components/css_components/Form.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/Form.module.css
@@ -30,3 +30,13 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.instas{
+    
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-top: 10px;
+}
+
