[UPDATE] Puxando imagem no cardápio

--- a/Codigo/atelier_picinin/src/components/css_components/CardHome.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/CardHome.module.css
@@ -2,6 +2,11 @@
     color: rgb(255, 238, 0);
 }
 
+.card-img-top {
+    width: 286px;
+    height: 180px;
+}
+
 .card {
     width: 18rem;
     -webkit-animation: card 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
