--- a/Codigo/atelier_picinin/src/components/css_components/layout/CabecalhoAdmin.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/layout/CabecalhoAdmin.module.css
@@ -2,15 +2,59 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 15px;
-    background-color: #D9D9D9;
+    padding: 20px 35px;
     width: 100%;
+    text-decoration: none;
+}
+
+.div-header a {
+    color: rgb(24, 24, 24);
+}
+
+.div-header > a:last-child {
+    font-size: 25px;
+}
+
+.logo-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo-menu > div {
+    margin-left: 150px;
+}
+
+.menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.menu > a {
+    text-decoration: none;
+    position: relative;
+}
+
+.menu > a::after, .menu > a.active::after {
+    content: '';
+    position: absolute;
+    display: block;
+    height: 2px;
+    width: 0%;
+    background-color: rgb(255, 92, 92);
+    bottom: -5px;
+}
+
+.menu > a:hover::after {
+    width: 100%;
+}
+
+.menu > a:not(:first-child) {
+    margin-left: 50px;
 }
 
 .logo {
     font-size: 20px;
-}
-
-ul {
-    list-style: none;
+    margin: 0;
 }
