--- a/Codigo/atelier_picinin/src/components/css_components/layout/CabecalhoCliente.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/layout/CabecalhoCliente.module.css
@@ -1,31 +1,74 @@
 /**** Estilos cabeçalho ****/
-
 .div-header {
-    background-color: #D9D9D9;
-    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
     justify-content: space-between;
-    padding: 15px;
+    padding: 20px 35px;
+    width: 100%;
+    text-decoration: none;
+}
+
+.div-header a {
+    color: rgb(24, 24, 24);
+}
+
+.div-header > a:last-child {
+    font-size: 25px;
+}
+
+.logo-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo-menu > div {
+    margin-left: 150px;
+}
+
+.menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.menu > a:not(:first-child) {
+    margin-left: 50px;
+}
+
+.menu > a {
+    text-decoration: none;
+    position: relative;
+}
+
+.menu > a::after, .menu > a.active::after {
+    content: '';
+    position: absolute;
+    display: block;
+    height: 2px;
+    width: 0%;
+    background-color: rgb(255, 92, 92);
+    bottom: -5px;
+}
+
+.menu > a:hover::after {
+    width: 100%;
 }
 
 .logo {
     font-size: 20px;
-    padding: 15px;
+    margin: 0;
 }
 
 .buttons {
     display: flex;
-    margin-right: 30px;
+    justify-content: space-between;
+    align-items: center;
     gap: 20px;
 }
 
-.carrinho,
-.perfil {
+.buttons > a {
     font-size: 25px;
     border: 0;
-    background-color: #D9D9D9;
 }
-
 /**** Fim estilos cabeçalho ****/
