[Update] Finalização do carrinho

--- a/Codigo/atelier_picinin/src/App.css
+++ b/Codigo/atelier_picinin/src/App.css
@@ -3,37 +3,23 @@
 *{
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    color: rgb(24, 24, 24);
+    border: none;
+    margin: 0;
+    padding: 0;
+}
+
+body, html {
+    max-width: 2000px;
 }
 
 .App {
-    max-width: 2000px;
-    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
-
-.App > div {
-    margin: 100px 0;
-}
-
-.App > div {
-    width: 65%;
-}
-
-.App > div.body-home {
-    width: 100%;
-}
-
-.App > div.body-home > div {
-    margin: 0 auto;
-}
-
-.App a {
-    text-decoration: none;
-    color: rgb(24, 24, 24);
-
+    min-height: 100vh;
 }
 
 @media (max-width: 600px) {
