--- a/Codigo/atelier_picinin/src/pages/css/cart/Carrinho.css
+++ b/Codigo/atelier_picinin/src/pages/css/cart/Carrinho.css
@@ -1,10 +1,18 @@
+:root {
+    --light-gray: #f1f1f1;
+    --white: #fff;
+    --bege: #f3e8db;
+}
+
 .body-cart {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    width: 100% !important;
-    margin: 0 !important;
+    align-items: flex-start;
     gap: 30px;
+    position: relative;
+    max-width: 80rem;
+    width: 100%;
+    padding: 100px 30px;
 }
 
 .cart-content {
@@ -12,31 +20,41 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    margin-left: 70px;
     min-height: 350px;
+    width: 70%;
+}
+
+.cart-items {
+    margin-top: 30px;
+    width: 100%;
 }
 
 .summary-order {
+    position: sticky;
+    top: 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 30%;
-    background-color: rgb(24, 24, 24);
-    height: 500px;
+    max-width: 300px;
+    background-color: var(--bege);
+    border-radius: 5px;
+    padding: 30px;
 }
 
 .summary-order h1 {
     font-size: 20px;
     font-weight: 500;
-    color: rgb(231, 231, 231);
+    text-align: left;
+    width: 100%;
+    margin-bottom: 15px;
 }
 
 .title-page {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 60px;
 }
 
 .title-page h1 {
