--- a/Codigo/atelier_picinin/src/pages/css/home/Home.css
+++ b/Codigo/atelier_picinin/src/pages/css/home/Home.css
@@ -1,7 +1,11 @@
-/**** Estilos Banner ****/
+.body-home {
+    width: 100%;
+}
+
+/* Estilos Banner */
 
 .banner {
-    width: 100%;
+    width: 100% !important;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -45,16 +49,17 @@
     background-color: #af8b8b81;
 }
 
-/**** Fim estilos Banner ****/
+/* Fim estilos Banner */
 
-/**** Estilos Cardápio ****/
+/* Estilos Cardápio */
 
 .div-cardapio {
     width: 65%;
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
-    padding: 100px;
+    padding-top: 100px;
+    margin: 0 auto;
 }
 
 .div-cardapio h3 {
@@ -69,8 +74,9 @@
 
 .cards {
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
     flex-wrap: wrap;
-    justify-content: center;
     gap: 140px;
+    width: 100%;
 }
