--- a/Codigo/atelier_picinin/src/pages/css/home/Home.css
+++ b/Codigo/atelier_picinin/src/pages/css/home/Home.css
@@ -1,5 +1,6 @@
 .body-home {
     width: 100%;
+    padding: 100px 0;
 }
 
 /* Estilos Banner */
@@ -77,6 +78,6 @@
     justify-content: space-between;
     align-items: flex-start;
     flex-wrap: wrap;
-    gap: 140px;
+    gap: 50px;
     width: 100%;
 }
