--- a/Codigo/atelier_picinin/src/components/css_components/layout/Input.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/layout/Input.module.css
@@ -3,6 +3,7 @@ div.divInput {
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
+    width: 100%;
 }
 
 .input, .label {
