--- a/Codigo/atelier_picinin/src/pages/css/cart/Carrinho.css
+++ b/Codigo/atelier_picinin/src/pages/css/cart/Carrinho.css
@@ -41,6 +41,7 @@
     background-color: var(--bege);
     border-radius: 5px;
     padding: 30px;
+    row-gap: 15px;
 }
 
 .summary-order h1 {
@@ -48,7 +49,11 @@
     font-weight: 500;
     text-align: left;
     width: 100%;
-    margin-bottom: 15px;
+    margin: 0 ;
+}
+
+.summaryContent {
+    width: 100%;
 }
 
 .title-page {
@@ -68,10 +73,14 @@
     margin-left: 10px;
 }
 
+.dropdown {
+    display: none;
+}
+
 @media (max-width: 600px) {
     .body-cart {
         flex-direction: column;
-        padding: 100px 0;
+        padding: 50px 0;
     }
 
     .cart-content {
@@ -79,7 +88,45 @@
     }
 
     .summary-order {
-        max-width: 100%;
+        max-width: 100vw !important;
+        width: 100vw !important;
+        height: 34px;
+        padding: 15px 30px;
+        position: fixed;
+        top: auto;
+        left: 0;
+        bottom: 0;
+        border-radius: 12px 12px 0 0;
+        justify-content: flex-start;
+        row-gap: 30px;
+        transition: height .3s ease-out;
+    }
+    
+    .summary-order.active {
+        height: 314px;
+        padding: 15px 30px 30px;
+    }
+
+    .summaryContent {
+        display: block;
+    }
+
+    .summaryContent.hidden {
+        display: none;
+    }
+
+    .dropdown {
+        display: block;
+        background: none;
+        font-size: 18px;
         width: 100%;
+    }
+
+    .line {
+        height: 2px;
+        width: 30px;
+        border: 2px solid #b6b6b6;
+        border-radius: 20px;
+        margin: 0 auto;
     }
 }
