--- a/Codigo/atelier_picinin/src/pages/css/Products/DetalhesProduto.css
+++ b/Codigo/atelier_picinin/src/pages/css/Products/DetalhesProduto.css
@@ -1,3 +1,4 @@
+/* Estilos avaliação */
 .btn-avaliar,
 .btn-enviar {
     border-radius: 10px;
@@ -17,4 +18,35 @@
     width: 100%;
     margin-top: 50px;
     margin-bottom: 50px;
+}
+
+/* Estilos estrelas avaliação */
+.avaliacao {
+    display: flex;
+    justify-content: center;
+}
+
+.star-icon {
+    font-size: 50px;
+    width: 50px;
+    list-style-type: none;
+    border: 1px solid #fff;
+    cursor: pointer;
+    color: #ffe500;
+}
+
+.star-icon::before {
+    content: "\2605";
+}
+
+.star-icon.ativo~.star-icon::before {
+    content: "\2606";
+}
+
+.avaliacao:hover .star-icon::before {
+    content: "\2605";
+}
+
+.star-icon:hover~.star-icon::before {
+    content: "\2606";
 }
