[Update] Adição da página de adicionar endereço de entrega

--- a/Codigo/atelier_picinin/src/App.css
+++ b/Codigo/atelier_picinin/src/App.css
@@ -22,6 +22,10 @@ body, html {
     min-height: 100vh;
 }
 
+.App > div {
+    padding: 100px 0;
+}
+
 @media (max-width: 600px) {
     .App > div {
         width: 90%;
