--- a/Codigo/atelier_picinin/src/components/css_components/InputComponentTable.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/InputComponentTable.module.css
@@ -26,6 +26,11 @@
     width: 65px;
 }
 
+.btnManipulate {
+    display: flex;
+    justify-content: space-between;
+}
+
 .emfalta{
     text-align: center;
     font-weight: 500;
