--- a/Codigo/atelier_picinin/src/components/css_components/layout/Button.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/layout/Button.module.css
@@ -1,8 +1,8 @@
 :root{
     --verde: rgb(0, 255, 13);
     --btn-azul: #4939FF;
-    --dark-gray: rgb(46, 46, 46);
-    --light-gray: rgb(247, 247, 247);
+    --dark-gray: #1f1f1f;
+    --light-gray: #f7f7f7;
     --pastel-red: #ff6961;
     --box-shadow: 1px 1px 5px rgba(0, 0, 0, .2);
 }
@@ -20,7 +20,6 @@
     padding: 5px 15px;
     color: white;
     transition: all .2s;
-    margin-top: 10px;
 }
 
 .btnCadastrar:hover{
@@ -32,9 +31,9 @@
 .btnBack{
     border: none;
     background-color: var(--dark-gray);
+    color: white;
     border-radius: 20px;
     padding: 5px 15px;
-    color: white;
     transition: all .2s;
 }
 
@@ -46,8 +45,8 @@
 
 .btnClear {
     border: none;
-    background-color: var(--dark-gray);
-    border-radius: 20px;
+    background-color: var(--pastel-red);
+    border-radius: 100%;
     height: 35px;
     width: 35px;
     padding: 0;
@@ -56,7 +55,7 @@
 }
 
 .btnClear:hover{
-    color: var(--dark-gray);
+    color: var(--pastel-red);
     background-color: white;
     box-shadow: var(--box-shadow);
 }
