--- a/Codigo/atelier_picinin/src/components/css_components/layout/Dropdown.module.css
+++ b/Codigo/atelier_picinin/src/components/css_components/layout/Dropdown.module.css
@@ -1,10 +1,11 @@
-.body-dropdown {
+div.body-dropdown {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    column-gap: 50px;
 }
 
-.divSelect {
+div.divSelect {
     display: inherit;
     justify-content: inherit;
     align-items: flex-start;
