--- a/Codigo/atelier_picinin/src/pages/css/cart/Carrinho.css
+++ b/Codigo/atelier_picinin/src/pages/css/cart/Carrinho.css
@@ -4,7 +4,7 @@
     --bege: #f3e8db;
 }
 
-.body-cart {
+div.body-cart {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -12,7 +12,7 @@
     position: relative;
     max-width: 80rem;
     width: 100%;
-    padding: 100px 30px;
+    padding: 30px 30px 100px;
 }
 
 .cart-content {
@@ -58,10 +58,11 @@
 
 .title-page {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
     column-gap: 15px;
+    padding: 0 30px;
 }
 
 .title-page h1 {
@@ -105,11 +106,11 @@
     }
 
     .summaryContent {
-        display: block;
+        display: none;
     }
 
-    .summaryContent.hidden {
-        display: none;
+    .summaryContent.show {
+        display: block;
     }
 
     .dropdown {
