--- a/Codigo/atelier_picinin/src/pages/css/inventory/Estoque.css
+++ b/Codigo/atelier_picinin/src/pages/css/inventory/Estoque.css
@@ -4,7 +4,9 @@
     flex-direction: column;
     align-items: center;
     gap: 30px;
-    margin: 0 auto;    
+    margin: 0 auto;
+    max-width: 60rem;
+    width: 100%;   
 }
 
 .titleButton {
