--- a/Codigo/atelier_picinin/src/components/layout/css/CabecalhoAdmin.css
+++ b/Codigo/atelier_picinin/src/components/layout/css/CabecalhoAdmin.css
@@ -1,4 +1,3 @@
-/**** Estilos cabeçalho ****/
 .div-header {
     display: flex;
     flex-wrap: wrap;
@@ -21,7 +20,6 @@
     justify-content: space-between;
     align-items: center;
     column-gap: 150px;
-
 }
 
 .menu {
@@ -36,12 +34,12 @@
     position: relative;
 }
 
-.menu > a::after, .menu > a.active::after {
+.menu > a.active::after {
     content: '';
     position: absolute;
     display: block;
     height: 2px;
-    width: 0%;
+    width: 100%;
     background-color: rgb(255, 92, 92);
     bottom: -5px;
 }
@@ -54,16 +52,3 @@
     font-size: 20px;
     margin: 0;
 }
-
-.buttons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 20px;
-}
-
-.buttons > a {
-    font-size: 25px;
-    border: 0;
-}
-/**** Fim estilos cabeçalho ****/
