Mensagem de avaliação cadastrada

--- a/Codigo/atelier_picinin/src/pages/css/Products/DetalhesProduto.css
+++ b/Codigo/atelier_picinin/src/pages/css/Products/DetalhesProduto.css
@@ -1,3 +1,20 @@
+.buttongroup {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.sabores {
+    margin-top: 20px;
+}
+
+.btncarrinho {
+    margin-top: 20px;
+}
+
+.informacoes {
+    margin-top: 50px;
+}
+
 /*  Estilos avaliação  */
 .btn-avaliar,
 .btn-enviar {
